--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Google Clone</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="shortcut icon" href="./icon.png" />
   </head>
   <body>
     <header>
@@ -42,7 +43,7 @@
         <div class="main-input-container">
           <span class="search-icon"> </span>
           <input type="text" />
-          <a class="micro-item" href=""></a>
+          <a class="micro-icon" href=""></a>
         </div>
       </section>
       <section class="main-buttons">
@@ -54,5 +55,33 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <ul class="footer-left">
+        <li>
+          <a href="">Publicidad</a>
+        </li>
+        <li>
+          <a href="">Negocios</a>
+        </li>
+        <li>
+          <a href="">Acerca de</a>
+        </li>
+        <li>
+          <a href="">Cómo funciona la búsqueda</a>
+        </li>
+      </ul>
+      <ul class="footer-right">
+        <li>
+          <a href="">Privacidad</a>
+        </li>
+        <li>
+          <a href="">Condiciones</a>
+        </li>
+        <li>
+          <a href="">Preferencias</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
